MDEV-36168 ASAN error in Item_func_latlongfromgeohash::decode_geohash

decode_geohash now properly filters non ASCII values from the input.